## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = jar logging prefs regex zip

EXTRA_DIST = \
AbstractCollection.java \
AbstractList.java \
AbstractMap.java \
AbstractSequentialList.java \
AbstractSet.java \
ArrayList.java \
Arrays.java \
BitSet.java \
Calendar.java \
Collection.java \
Collections.java \
Comparator.java \
ConcurrentModificationException.java \
Date.java \
Dictionary.java \
EmptyStackException.java \
Enumeration.java \
EventListener.java \
EventListenerProxy.java \
EventObject.java \
GregorianCalendar.java \
HashMap.java \
HashSet.java \
Hashtable.java \
IdentityHashMap.java \
Iterator.java \
LinkedHashMap.java \
LinkedHashSet.java \
LinkedList.java \
ListIterator.java \
List.java \
ListResourceBundle.java \
Locale.java \
Map.java \
MissingResourceException.java \
NoSuchElementException.java \
Observable.java \
Observer.java \
Properties.java \
PropertyPermissionCollection.java \
PropertyPermission.java \
PropertyResourceBundle.java \
RandomAccess.java \
Random.java \
ResourceBundle.java \
Set.java \
SimpleTimeZone.java \
SortedMap.java \
SortedSet.java \
Stack.java \
StringTokenizer.java \
Timer.java \
TimerTask.java \
TimeZone.java \
TooManyListenersException.java \
TreeMap.java \
TreeSet.java \
Vector.java \
WeakHashMap.java \
package.html

