## Input file for automake

EXTRA_DIST = \
package.html \
Accessible.java \
AccessibleAction.java \
AccessibleBundle.java \
AccessibleComponent.java \
AccessibleContext.java \
AccessibleEditableText.java \
AccessibleExtendedComponent.java \
AccessibleExtendedTable.java \
AccessibleHyperlink.java \
AccessibleHypertext.java \
AccessibleIcon.java \
AccessibleKeyBinding.java \
AccessibleRelation.java \
AccessibleRelationSet.java \
AccessibleResourceBundle.java \
AccessibleRole.java \
AccessibleSelection.java \
AccessibleState.java \
AccessibleStateSet.java \
AccessibleTable.java \
AccessibleTableModelChange.java \
AccessibleText.java \
AccessibleValue.java \
package.html

