## input for automake

SUBDIRS = directory event ldap spi

EXTRA_DIST = \
AuthenticationException.java \
AuthenticationNotSupportedException.java \
BinaryRefAddr.java \
Binding.java \
CannotProceedException.java \
CommunicationException.java \
CompositeName.java \
CompoundName.java \
ConfigurationException.java \
Context.java \
ContextNotEmptyException.java \
InitialContext.java \
InsufficientResourcesException.java \
InterruptedNamingException.java \
InvalidNameException.java \
LimitExceededException.java \
LinkException.java \
LinkLoopException.java \
LinkRef.java \
MalformedLinkException.java \
NameAlreadyBoundException.java \
NameClassPair.java \
Name.java \
NameNotFoundException.java \
NameParser.java \
NamingEnumeration.java \
NamingException.java \
NamingSecurityException.java \
NoInitialContextException.java \
NoPermissionException.java \
NotContextException.java \
OperationNotSupportedException.java \
PartialResultException.java \
RefAddr.java \
Referenceable.java \
Reference.java \
ReferralException.java \
ServiceUnavailableException.java \
SizeLimitExceededException.java \
StringRefAddr.java \
TimeLimitExceededException.java \
package.html

