## Input file for automake to generate the Makefile.in used by configure

EXTRA_DIST = \
ConnectionEvent.java \
ConnectionEventListener.java \
ConnectionPoolDataSource.java \
DataSource.java \
PooledConnection.java \
RowSetEvent.java \
RowSetInternal.java \
RowSet.java \
RowSetListener.java \
RowSetMetaData.java \
RowSetReader.java \
RowSetWriter.java \
XAConnection.java \
XADataSource.java \
package.html
