## Process this file with automake to produce Makefile.in
MAINTAINERCLEANFILES = Makefile.in
INCLUDES = @IFLAGS@
LIBS =

noinst_LTLIBRARIES = libjavalangreflect.la

libjavalangreflect_la_SOURCES = \
	java_lang_reflect_Constructor.c java_lang_reflect_Constructor.h \
	java_lang_reflect_Field.c java_lang_reflect_Field.h \
	java_lang_refect_Member.h \
	java_lang_reflect_Method.c java_lang_reflect_Method.h \
	java_lang_reflect_Modifier.h
