## Process this file with automake to produce Makefile.in
MAINTAINERCLEANFILES = Makefile.in
INCLUDES = @IFLAGS@
LDFLAGS =
LIBS =

noinst_LTLIBRARIES = libjavalang.la

libjavalang_la_SOURCES = \
	java_lang_System.c java_lang_Class.c java_lang_Throwable.c \
	java_lang_Object.c java_lang_String.c java_lang_Thread.c \
	java_lang_Float.c java_lang_Double.c java_lang_Math.c \
	java_lang_Runtime.c
