## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.20 2005-11-28 06:26:28 salcianu Exp $
MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = *~
INCLUDES = @IFLAGS@
LIBS =

noinst_LTLIBRARIES = libjavalang-indep.la

libjavalang_indep_la_SOURCES = \
	class.h object.h properties.h runtime.h system.h \
	thread.c thread.h \
	threadlist.c threadlist.h
